--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -60,3 +60,9 @@
         font-size: 14px;
     }
 }
+
+@media screen and (max-width: 500px) {
+    .navlinks a{
+        font-size: 12px;
+    }
+}
